--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "test online": "jest --watch",
-    "test": "jest --passWithNoTests",
+    "test": "jest --coverage",
     "build": "next build",
     "start": "next start",
     "prepare": "husky install"
@@ -42,6 +42,7 @@
     "postcss": "^8",
     "prettier": "3.1.0",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   },
   "lint-staged": {
