--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "3.1.0",
+    "react-icons": "^4.12.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5"
