--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "3.1.0",
