--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^1.0.8",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
