feat: add editor view

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "@uiw/react-codemirror": "^4.21.21",
     "autoprefixer": "^10.0.1",
+    "cm6-graphql": "^0.0.12",
+    "codemirror": "^6.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.1.0",
