--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@auth/firebase-adapter": "^1.0.8",
     "firebase": "^10.7.1",
     "firebase-admin": "^11.11.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.49.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
