fix: add node env in script test

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "test watch": "jest --watch",
-    "test": "jest --coverage",
+    "test": "NODE_ENV=test jest --coverage",
     "build": "next build",
     "start": "next start",
     "prepare": "husky install"
